set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(extract_original_mesh)
IF(${MANDOLINE_USE_OPENGL})
ADD_SUBDIRECTORY(viewer)
ADD_SUBDIRECTORY(slicer)
ADD_SUBDIRECTORY(exploded_mesh)
ADD_SUBDIRECTORY(point_chaser)
ADD_SUBDIRECTORY(curve_drawing_2d)
ADD_SUBDIRECTORY(mesh_boundary_2d)
ADD_SUBDIRECTORY(enright_test)
ENDIF(${MANDOLINE_USE_OPENGL})
ADD_SUBDIRECTORY(laplacian)
ADD_SUBDIRECTORY(region_boundaries)
ADD_SUBDIRECTORY(particle_cell_ownership_benchmark)
