vis_enabled = get_option('visualization')
if vis_enabled
  #subdir(viewer)
  #subdir(slicer)
  #subdir(exploded_mesh)
  #subdir(point_chaser)
  #subdir(curve_drawing_2d)
  #subdir(mesh_boundary_2d)
  #subdir(enright_test)
endif
#subdir(laplacian)
#subdir(region_boundaries)
#subdir(particle_cell_ownership_benchmark)
#subdir(checkerboard_surface_mesh)
